--- a/app/src/main/res/layout/fragment_artist_search.xml
+++ b/app/src/main/res/layout/fragment_artist_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent">
 
     <GridView
-        android:id="@+id/gv_artist"
+        android:id="@+id/gv_artist_search"
         android:layout_width="match_parent"
         android:numColumns="2"
         android:columnWidth="200dp"
