--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -5,7 +5,10 @@
     android:layout_gravity="fill_vertical"
     android:clipToPadding="false"
     android:isScrollContainer="false"
+    android:background="@android:color/white"
     android:orientation="vertical"
+    android:paddingBottom="60dp"
+    android:paddingTop="?attr/actionBarSize"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
