Add dimen attr + remove hard code in activity_pl

--- a/app/src/main/res/layout/activity_pl.xml
+++ b/app/src/main/res/layout/activity_pl.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".activity.PLActivity">
 
@@ -12,6 +13,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar2"
+            app:contentInsetStart="0dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary">
@@ -26,8 +28,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
-                    android:background="@android:color/transparent"
+                    android:layout_marginHorizontal="@dimen/margin_hori_imagebutton_toolbar"
+                    android:background="@color/transparent"
                     android:src="@drawable/ic_arrow_back_white_24dp" />
 
                 <TextView
@@ -38,7 +40,7 @@
                     android:layout_toRightOf="@+id/backBtnPL"
                     android:text="Playlist's name"
                     android:textColor="@color/textLight"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/text_size_title"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -47,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginHorizontal="@dimen/margin_hori_imagebutton_toolbar"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_more_vert_white_24dp" />
             </RelativeLayout>
@@ -59,8 +61,8 @@
         android:id="@+id/recyclerPLItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
-        android:paddingBottom="60dp" />
+        android:layout_marginTop="?attr/actionBarSize"
+        android:paddingBottom="@dimen/footer_height" />
 
     <fragment
         android:id="@+id/footer"
