--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="tabUnselectedIconColor">#ffffff</color>
     <color name="textLight">#ffffff</color>
     <color name="textDark">#000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
