--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="margin_hori_imagebutton_toolbar">10dp</dimen>
+    <dimen name="footer_height">60dp</dimen>
+    <dimen name="text_size_title">20dp</dimen>
 </resources>
