--- a/app/src/main/res/layout/activity_current_song.xml
+++ b/app/src/main/res/layout/activity_current_song.xml
@@ -26,7 +26,7 @@
                 android:scaleType="fitXY"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="@dimen/footer_height"
                 android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_favorite_orange_24dp"/>
@@ -37,7 +37,7 @@
                 android:scaleType="fitXY"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="@dimen/footer_height"
                 android:layout_marginLeft="5dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_playlist_add_orange_24dp"/>
@@ -46,7 +46,7 @@
     </FrameLayout>
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:background="#55000000"
+        android:background="@color/semi_transparent_bg"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
@@ -65,9 +65,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@android:color/transparent"
+                    android:layout_marginHorizontal="@dimen/margin_hori_imagebutton_toolbar"
+                    android:background="@color/transparent"
                     android:src="@drawable/ic_arrow_back_white_24dp" />
 
                 <LinearLayout
@@ -88,7 +87,7 @@
                         android:marqueeRepeatLimit="marquee_forever"
                         android:scrollHorizontally="true"
                         android:textColor="@color/textLight"
-                        android:textSize="20dp"
+                        android:textSize="@dimen/text_size_title"
                         android:textStyle="bold" />
                     <TextView
                         android:id="@+id/song_artist"
@@ -100,7 +99,7 @@
                         android:scrollHorizontally="true"
                         android:singleLine="true"
                         android:textColor="@color/textLight"
-                        android:textSize="14dp" />
+                        android:textSize="@dimen/text_size_sub" />
                 </LinearLayout>
 
 
@@ -110,9 +109,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@android:color/transparent"
+                    android:layout_marginHorizontal="@dimen/margin_hori_imagebutton_toolbar"
+                    android:background="@color/transparent"
                     android:src="@drawable/ic_queue_music_white_24dp" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
@@ -121,10 +119,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/footer_height"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="#55000000"
+        android:background="@color/semi_transparent_bg"
         android:gravity="center_vertical|center_horizontal">
 
         <ImageButton
