--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="textLight">#ffffff</color>
     <color name="textDark">#000000</color>
     <color name="transparent">#00000000</color>
+    <color name="semi_transparent_bg">#55000000</color>
 </resources>
