Add dimen attr + remove hard code in activity_main

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="footer_height">60dp</dimen>
     <dimen name="text_size_title">20dp</dimen>
     <dimen name="text_size_sub">15dp</dimen>
+    <dimen name="imagebutton_tollbar_size">30dp</dimen>
 </resources>
