--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            app:contentInsetStart="0dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -32,22 +33,21 @@
                 <ImageButton
                     android:id="@+id/tb_person_ic"
                     android:background="@android:color/transparent"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/imagebutton_tollbar_size"
+                    android:layout_height="@dimen/imagebutton_tollbar_size"
                     android:scaleType="fitXY"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginHorizontal="@dimen/margin_hori_imagebutton_toolbar"
                     android:src="@drawable/ic_person_white_48dp"/>
                 <ImageButton
                     android:id="@+id/tb_search_ic"
                     android:background="@android:color/transparent"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/imagebutton_tollbar_size"
+                    android:layout_height="@dimen/imagebutton_tollbar_size"
                     android:scaleType="fitXY"
                     android:layout_toLeftOf="@+id/tb_person_ic"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
                     android:src="@drawable/ic_search_white_48dp"/>
             </RelativeLayout>
 
@@ -66,7 +66,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="60dp"
+        android:paddingBottom="@dimen/footer_height"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </androidx.viewpager.widget.ViewPager>
