--- a/app/src/main/res/drawable/ic_skip_next_orange_24dp.xml
+++ b/app/src/main/res/drawable/ic_skip_next_orange_24dp.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#5E2817"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:fillColor="#FF5722"
+        android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z" />
 </vector>
