--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2a555b</color>
-    <color name="colorPrimaryDark">#2a555b</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#C65B39</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="activeMain">#b6cccc</color>
+    <color name="activeMain">#5E2817</color>
     <color name="tabUnselectedIconColor">#ffffff</color>
     <color name="textLight">#ffffff</color>
     <color name="textDark">#000000</color>
     <color name="transparent">#00000000</color>
     <color name="semi_transparent_bg">#55000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
