--- a/app/src/main/res/layout/fragment_artist_search.xml
+++ b/app/src/main/res/layout/fragment_artist_search.xml
@@ -7,6 +7,8 @@
 
     <GridView
         android:id="@+id/gv_artist_search"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:numColumns="2"
         android:columnWidth="200dp"
