--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:background="#D1DEEC"
+            android:background="@color/semi_transparent_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingHorizontal="10dp">
@@ -33,7 +33,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
+                android:background="@color/transparent"
+                android:textColor="@color/textLight"
                 android:drawableLeft="@drawable/ic_play_circle_filled_white_24dp"
                 android:text="Nghe tất cả" />
         </RelativeLayout>
