--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#C65B39</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#5E2817</color>
     <color name="activeMain">#5E2817</color>
     <color name="tabUnselectedIconColor">#ffffff</color>
     <color name="textLight">#ffffff</color>
