--- a/app/src/main/res/layout/card_view_queue.xml
+++ b/app/src/main/res/layout/card_view_queue.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     card_view:cardElevation="0dp"
+    card_view:cardBackgroundColor="@color/transparent"
     tools:ignore="MissingDefaultResource">
 
     <RelativeLayout
