--- a/app/src/main/res/layout/fragment_song_search.xml
+++ b/app/src/main/res/layout/fragment_song_search.xml
@@ -6,6 +6,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/re_song_search"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
