--- a/app/src/main/res/layout/pl_card_view.xml
+++ b/app/src/main/res/layout/pl_card_view.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="1dp"
     android:layout_marginBottom="5dp"
+    card_view:cardBackgroundColor="@color/transparent"
     card_view:cardElevation="0dp">
 
     <RelativeLayout
