--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -8,7 +8,7 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/footer_height"
-    android:paddingTop="?attr/actionBarSize"
+    android:paddingTop="65dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
