--- a/app/src/main/res/layout/card_view_queue.xml
+++ b/app/src/main/res/layout/card_view_queue.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     card_view:cardElevation="0dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/transparent"
     tools:ignore="MissingDefaultResource">
 
@@ -47,6 +49,8 @@
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
                 android:padding="5dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_more_vert_black_18dp" />
 
             <LinearLayout
