--- a/app/src/main/res/layout/card_view_queue.xml
+++ b/app/src/main/res/layout/card_view_queue.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     card_view:cardElevation="0dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/transparent"
     tools:ignore="MissingDefaultResource">
 
@@ -28,6 +30,7 @@
             android:id="@+id/cv_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_toRightOf="@+id/drag_handle"
             android:scaleType="centerCrop"
             android:src="@drawable/default_image" />
@@ -35,6 +38,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
             android:layout_toRightOf="@+id/cv_image">
 
             <ImageButton
@@ -45,6 +49,8 @@
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
                 android:padding="5dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_more_vert_black_18dp" />
 
             <LinearLayout
