--- a/app/src/main/res/layout/footer_fragment.xml
+++ b/app/src/main/res/layout/footer_fragment.xml
@@ -26,7 +26,7 @@
             android:id="@+id/playBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@android:color/transparent"
+            android:background="?selectableItemBackgroundBorderless"
             android:scaleType="fitXY"
             android:src="@drawable/ic_play_circle_filled_orange_40dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
             android:id="@+id/nextBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@android:color/transparent"
+            android:background="?selectableItemBackgroundBorderless"
             android:scaleType="fitXY"
             android:src="@drawable/ic_skip_next_orange_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
