--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -26,12 +26,12 @@
                 android:src="@drawable/ic_play_circle_outline_orange_40dp"
                 android:layout_alignBottom="@+id/image_song_album"
                 android:layout_alignParentRight="true"
-                android:background="@color/transparent"/>
+                android:background="?selectableItemBackgroundBorderless"/>
             <ImageButton
                 android:id="@+id/back_btn_album"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_back_white_24dp"/>
+                android:background="?selectableItemBackgroundBorderless"/>
         </RelativeLayout>
 
         <LinearLayout
