--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -25,7 +25,7 @@
                 android:src="@drawable/ic_play_circle_outline_orange_40dp"
                 android:layout_alignBottom="@+id/image_song_artist"
                 android:layout_alignParentRight="true"
-                android:background="@color/transparent"/>
+                android:background="?selectableItemBackgroundBorderless"/>
             <ImageButton
                 android:id="@+id/back_btn_artist"
                 android:layout_width="wrap_content"
