--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                     android:textStyle="bold"/>
                 <ImageButton
                     android:id="@+id/tb_person_ic"
-                    android:background="@android:color/transparent"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:layout_width="@dimen/imagebutton_tollbar_size"
                     android:layout_height="@dimen/imagebutton_tollbar_size"
                     android:scaleType="fitXY"
@@ -42,7 +42,7 @@
                     android:src="@drawable/ic_person_white_48dp"/>
                 <ImageButton
                     android:id="@+id/tb_search_ic"
-                    android:background="@android:color/transparent"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:layout_width="@dimen/imagebutton_tollbar_size"
                     android:layout_height="@dimen/imagebutton_tollbar_size"
                     android:scaleType="fitXY"
