--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@drawable/rounded_trans_bg"
     card_view:cardElevation="0dp">
 
     <LinearLayout
@@ -69,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="@android:color/transparent"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_more_vert_white_24dp" />
 
