--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/transparent"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_marginBottom="5dp"
     card_view:cardElevation="0dp">
 
@@ -32,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
+                android:background="?selectableItemBackgroundBorderless"
                 android:padding="5dp"
                 android:src="@drawable/ic_more_vert_black_18dp" />
 
