--- a/app/src/main/res/layout/card_view_queue.xml
+++ b/app/src/main/res/layout/card_view_queue.xml
@@ -47,10 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
                 android:padding="5dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:background="?selectableItemBackgroundBorderless"
                 android:src="@drawable/ic_more_vert_black_18dp" />
 
             <LinearLayout
