Add play all list

--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -30,8 +30,8 @@
             <ImageButton
                 android:id="@+id/back_btn_album"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackgroundBorderless"/>
+                android:src="@drawable/ic_arrow_back_white_24dp"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
 
         <LinearLayout
