--- a/app/src/main/res/layout/artist_grid_item.xml
+++ b/app/src/main/res/layout/artist_grid_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:src="@drawable/default_image"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:id="@+id/linearlayoutContactName"
